--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.skillip</groupId>
-    <artifactId>JavaTour</artifactId>
+    <artifactId>java-tour</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
