--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,17 @@
             <artifactId>guice</artifactId>
             <version>4.2.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>2.1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>jaxen</groupId>
+            <artifactId>jaxen</artifactId>
+            <version>1.2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
